Closed Bug 1626638 Opened 5 years ago Closed 5 years ago

Tabs do not report correct subrole in OSX

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox76 --- fixed

People

(Reporter: eeejay, Assigned: eeejay)

Details

(Whiteboard: [mac2020_1])

Attachments

(1 file)

Tabs have a role of AXRadioButton and a subrole of AXTabButtton. We give the right role, but not the subrole.

Summary: Tabs to not report correct subrole in OSX → Tabs do not report correct subrole in OSX
Assignee: nobody → eitan
Status: NEW → ASSIGNED
Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/92888b11f520 Add subrole of AXTabButtton to page tabs. r=morgan
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: