Bug 1626638 - Add subrole of AXTabButtton to page tabs. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D69212