accessible/tests/browser/mac/browser_selectables.js
@@ -30,8 +30,7 @@ addAccessibleTask("mac/doc_aria_tabs.html", async (browser, accDoc) => {
 
   let tab = selectedTabs[0];
   is(tab.getAttributeValue("AXRole"), "AXRadioButton", "Correct role for tab");
-  // Bug 1626638
-  todo_is(
+  is(
     tab.getAttributeValue("AXSubrole"),
     "AXTabButton",
     "Correct subrole for tab"
